# repository_setup_guides

./: .gitignore  .releaserc.json  CHANGELOG.md  LICENSE.md  README.md
.github/workflows/: deploy.yml  release.yml
ci_cd/: automated_testing.md  github_actions_basics.md  releases.md
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/ci_cd/: automated_testing.md  coverage_reports.md  github_actions_basics.md  releases.md
docs/src/content/docs/documentation/: starlight_setup.md
docs/src/content/docs/getting_started/: python_package_template.md
docs/src/content/docs/version_control/: semantic_commits.md
docs/src/content/docs/virtual_environments/: uv_setup.md
template/: .releaserc.json  README.md  TEMPLATE_SETUP.md  pyproject.toml  setup.py
template/.github/workflows/: deploy-docs.yml  release.yml  tests.yml
template/_starlight/: astro.config.mjs
template/_starlight/src/content/docs/: getting_started.md  index.mdx
template/src/package_name/: __init__.py
template/tests/: test_example.py
version_control/: semantic_commits.md
virtual_environments/: poetry_setup.md  uv_setup.md
