[project]
name = "package-name"
version = "0.1.0"
description = "Package description"
authors = [{name = "Author Name", email = "author@example.com"}]
readme = "README.md"
license = {text = "ISC"}
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/username/package-name"
Documentation = "https://username.github.io/package-name/"
Repository = "https://github.com/username/package-name"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
